# alpha-vantage-mcp

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  deploy.sh  index.html  lambda_function.py  pyproject.toml  renovate.json  request_certificate.sh  samconfig.toml  template.yaml
infra/: infra.yaml  (+1 more)
server/: .env.example  SPRINT_1_COMPLETION_REPORT.md  SPRINT_3_COMPLETION_REPORT.md  SPRINT_3_PLAN.md  SPRINT_4_PLAN.md  STARTUP_GUIDE.md  TESTING_REPORT.md  TOOL_INTEGRATION_AUDIT.md  authorization.html  lambda_function.py  local_http_server.py  pyproject.toml
server/docs/: epic-2.1.2-forex-crypto-consolidation.md  epic-2.2.1-moving-average-consolidation.md  epic-2.2.2-oscillator-consolidation.md  epic-2.2.3-additional-technical-indicators.md  epic-2.3.1-fundamental-data-consolidation.md  epic-2.3.2-economic-indicators-consolidation.md  epic-2.4.1-commodities-consolidation.md
server/docs/implementation/: SECURITY.md
server/examples/: token_estimator_usage.py
server/src/: __init__.py  common.py  context.py  decorators.py  oauth.py  openai_actions.py  stdio_decorators.py  stdio_server.py  utils.py
server/src/decision/: __init__.py  token_estimator.py
server/src/integration/: __init__.py  helpers.py  logging_config.py
server/src/output/: __init__.py  handler.py  project_tools.py
server/src/tools/: __init__.py  alpha_intelligence.py  commodities.py  company_data_router.py  company_data_schema.py  company_data_unified.py  core_stock_apis.py  crypto_schema.py  cryptocurrencies.py  cycle_router.py  cycle_schema.py  cycle_unified.py  economic_indicators.py  economic_indicators_router.py  economic_indicators_schema.py  economic_indicators_unified.py  energy_commodity_router.py  energy_commodity_schema.py  energy_commodity_unified.py  financial_statements_router.py  financial_statements_schema.py  financial_statements_unified.py  forex.py  forex_crypto_router.py  forex_crypto_unified.py  forex_schema.py  fundamental_data.py  market_data_router.py  market_data_schema.py  market_data_unified.py  materials_commodity_router.py  materials_commodity_schema.py  materials_commodity_unified.py  moving_average_router.py  moving_average_schema.py  moving_average_unified.py  openai.py  options_data_apis.py  oscillator_router.py  oscillator_schema.py  (+19 more)
server/src/utils/: __init__.py  output_config.py  r2_validator.py  security.py  (+1 more)
server/tests/: conftest.py  test_handler_direct.py  test_http_transport.py  test_large_response.py  test_openai_schema.py  test_r2_upload.py  test_rate_limit.py  test_remote.py  test_stdio_transport.py
(+112 files in other folders)
