[project]
name = "alpha-vantage-mcp-workspace"
version = "0.1.0"
description = "Alpha Vantage MCP workspace with server and web components"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["server"]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"